Change Log:

**3/29/16**
- Added Skill-specific APS calculation to DPS/Breakpoint calculator
- Fixed several Spike Traps mechanics
   - Spike Traps now arm properly (3 seconds for Long Fuse, 1 second for Sticky Trap, 1.5 seconds for all others)
   - Spike Traps now rearm properly (0.5 seconds after first charge)
   - Correct # of charges for spike traps (1 for Long Fuse, Sticky Trap and Echoing Blast, 3 for all others)
   - Correct Max # of traps (6 for Custom Engineering, 3 otherwise)
   - Spike Traps now require time to be placed (based on breakpoint calculations) and will trigger Focus/Restraint spender buff
   - Spike Traps will always be deployed first, if less than maximum are currently active and if there is enough hatred to do so
   - Scatter rune now correctly deploys 3 traps at once
   
**2/4/16**
- Added base +4% CHC for Sharpshooter
- Added support for parsing Caldesann's Repair dexterity bonus from hero profile

**2/3/16**
- Added Broken Promises

**1/21/16**
- Fixed S6 damage (was in log but not included in calculations)
- Cooldown skills (Vengeance, RoV, FoK) now start immediately and Vengeance/Seethe no longer waits until hatred has been reduced before starting

**1/13/16**
- Added Karlei's Point 
- Added Sword of Ill Will 
- Added Endless Walk
- Fixed import of legendary powers for Manticore and Dawn from battle.net profile
- Added new situational input for "percent time moving" which applies to Hexing Pants and Endless Walk
- Removed "percent time moving" from Hexing Pants special input
- Added checkbox for "Other Sets" (for Legacy of Nightmares) to indicate a Set other than those displayed in the calculator is being worn
- Added Shadow Set
- Added support for Melee weapons (not enforced in skill selection, and don't have fps/breakpoint data for melee weapons yet)

**1/12/16**

- Updated (mostly) for 2.4, still need to implement Shadow set, melee weapons and a few other things
-- Updated primary skills hatred generation